Added map to farm profiles with user's current location and farm location

--- a/views/farmers/edit.ejs
+++ b/views/farmers/edit.ejs
@@ -1,5 +1,5 @@
-<div class="container">
-  <h3>EDIT YOUR INFORMATION</h3>
+<div id="form" class="container">
+  <h2>EDIT YOUR INFORMATION</h2>
 </div>
 
 <form class="form" method="POST" action="/farmers/<%= farmer._id %>?_method=PUT">
