--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
         <% if (currentFarmer) { %>
         <%= currentFarmer.farm_name %>
         <% } else { %>
-        Farm Connect!
+        FARM CONNECT!
         <% } %>
       </a>
     </div>
