--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,28 +12,24 @@ body {
   position: absolute;
   top: 0; bottom: 0; left: 0; right: 0;
   color: white;
+  font-size: 1.7em;
 }
 
 h3, h4, h5 {
-  color: white;
   font-family: 'Neucha', cursive;
 }
 
 h1 {
   font-family: 'Neucha', cursive;
-  font-size: 6em;
+  font-size: 5em;
   color: #fff;
   text-align: center;
 }
 
 h2, h5 {
   font-family: 'Neucha', cursive;
-  font-size: 3em;
+  font-size: 2.5em;
   text-align: center;
-}
-
-p {
-  color: rgba(255, 255, 255, 0.7);
 }
 
 a {
@@ -83,7 +79,8 @@ ul {
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav>li>a {
   color: white;
-  font-size: 1.6em;
+  font-size: 1.3em;
+  font-weight: 500;
   font-family: "Dosis", cursive;
 }
 
@@ -146,6 +143,18 @@ ul {
   padding: 40px;
   border-radius: 5px;
   background-color: rgba(0,0,0,0.8);
+}
+#map {
+  color: #000;
+  margin-left: 50px;
+}
+
+#location {
+  color: #001100;
+  padding-left: 120px;
+}
+#location h2 {
+  text-align: left;
 }
 
 /*********************/
