--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <div class="row login">
+  <h2>LOGIN</h2>
   <form method="post" action="/login">
     <div class="col-md-3"></div>
     <div class="login-form col-md-6">
-      <h2>Login</h2>
       <div class="row">
         <div class="col-sm-6">
           <div class="form-group">
