--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,5 +1,5 @@
 <div id="form" class="container">
-  <h2>Registration</h2>
+  <h2>REGISTRATION</h2>
 </div>
 <!-- <div class="wrapper"> -->
   <div class="authform">
