--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,67 +9,63 @@
     <div class= "container">
       <div class="row">
         <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
+          <div class="title col-lg-6 col-lg-offset-3">
             <h1><%= title %></h1>
              <hr>
           </div>
         </div>
         <h5> "We pick it, you click it!" </h5>
-        <div class="col-xs-6">
-          <div class="imgWrap">
-            <img src="./images/arrows.png">
-            <div class= "imgDescription">
-              <ul>
-                <li> Locally grown food tastes and looks better. </li>
-                <li> Local food is better for you. The shorter the time between the farm and your table, the less likely it is that nutrients will be lost.</li>
-                <li> Local food is safe. There's a unique kind of assurance that comes from looking a farmer in the eye at farmers' market or driving by the fields where your food comes from.</li>
-              </ul>
+        <div class="row">
+          <div class="col-lg-10 col-md-offset-1">
+            <div class="col-lg-6">
+              <div class="imgWrap">
+                <img src="./images/arrows.png">
+                <div class= "imgDescription">
+                  <ul>
+                    <li> Locally grown food tastes and looks better. </li>
+                    <li> Local food is better for you. The shorter the time between the farm and your table, the less likely it is that nutrients will be lost.</li>
+                    <li> Local food is safe. There's a unique kind of assurance that comes from looking a farmer in the eye at farmers' market or driving by the fields where your food comes from.</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="imgWrap_Shovel">
+               <img src="./images/shovel.png">
+                <div class= "imgDescription_Shovel">
+                  <ul>
+                    <li> Farmers should think carefully about their operations and which opportunities might suit them best.</li>
+                    <li> Marketing takes time and resources although it can bring higher prices. </li>
+                    <li> With Farm connect, farmers can both strengthen their communities and their businesses</li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-xs-6">
-          <div class="imgWrap_Shovel">
-           <img src="./images/shovel.png">
-            <div class= "imgDescription_Shovel">
-              <ul>
-                <li> Farmers should think carefully about their operations and which opportunities might suit them best.</li>
-                <li> Marketing takes time and resources although it can bring higher prices. </li>
-                <li> With Farm connect, farmers can both strengthen their communities and their businesses</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-          <div class="or-spacer-vertical left">
+          <!-- <div class="or-spacer-vertical left">
             <div class="mask"></div>
-          </div>
+          </div> -->
       </div>
     </div>
 
     <div class = "wrapper">
       <div class = "row">
-        <div class = "col-lg-4 col-lg-offset-1">
-          <!-- MAYBE SOME CSS ANIMATION HERE -->
-          <h5>Search for farmers near you by inputing your address here:</h5>
+        <div class = "search-info col-lg-6 col-lg-offset-1">
+          <h4>Select one or more options to find farmers near you!</h4>
         </div>
-        <div class = "col-lg-2 col-lg-offset-1">
-            <h5>To narrow your search, give us a radius:</h5>
-          </div>
       </div>
       <div class ="row">
         <div class = "col-lg-5 col-lg-offset-1">
+          <!-- TODO: RENDER PRODUCTS CHECKBOXES AS SEARCH CRITERIA-->
+
           <input id="address" class = "form-control" type="search" placeholder="Coleman River Rd, Clayton, GA 30525">
         </div>
-        <div class = "dropdown col-lg-2">
-          <input id="radius" class = "form-control" type="number" placeholder="15 miles">
-        </div>
+
         <div class = "col-lg-1">
-          <button class="btn btn-primary" type="button" onclick="initialize(), codeAddress(document.getElementById('address').value), fetchPlaces()">Find a farmer!</button>
+          <button class="btn btn-primary btn-lg" type="button" onclick="initialize(), codeAddress(document.getElementById('address').value), fetchPlaces()">Find a farmer!</button>
         </div>
       </div>
-      <!-- TODO MAP NEEDS PADDING -->
-      <!-- OPTIONS FOR 1)DO SCALING 2)FIND DISTANCE FROM ADDRESS AND SORT -->
-      <!-- CALL FUNCTION TO LOAD MAP -->
-
     </div>
   </body>
 </html>
