--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -165,6 +165,10 @@ ul {
 #location h2 {
   text-align: left;
 }
+.row-btn {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
 
 /*********************/
 /****** FOOTER *******/
