--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,13 +5,14 @@
         <% if (currentFarmer) { %>
         <%= currentFarmer.farm_name %>
         <% } else { %>
-        FARM CONNECT!
+        <a class="navbar-brand" href="/">FARM CONNECT!</a>
         <% } %>
       </a>
     </div>
 
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/">Home</a></li>
+      <li><a href="/about">About</a></li>
       <% if (currentFarmer) { %>
         <li><a href="/farmers/<%= farmer._id %>">Profile</a></li>
       <% } %>
