--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -247,12 +247,9 @@ img {
   opacity: 1;
 }
 
-
-
 .imgWrap_Shovel {
   position: right;
   float: right;
-
   height: 250px;
   width: 257px;
 }
@@ -279,4 +276,26 @@ img {
 .imgWrap_Shovel:hover .imgDescription_Shovel {
   visibility: visible;
   opacity: 1;
+}
+
+/*////our Pix////*/
+
+.Pix {
+  border-radius: 40px;
+  position: relative;
+}
+
+.LinkedIn {
+  margin-bottom: 35px;
+}
+
+.col-md-4 {
+  width: 33.33333333%;
+  position: center;
+  text-align: center;
+}
+
+h6{
+  font-size: 1.8em;
+  font-family: "Dosis", sans-serif;
 }
