--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,11 +108,13 @@ ul {
 .authform {
   padding: 40px;
   margin: auto auto;
-  background-color: rgba(255, 255, 255, 0.2 );
+  background-color: rgba(255, 255, 255, 0.9 );
   border-radius: 5px;
   max-width: 80%;
   min-height: auto;
   margin-bottom: 40px;
+  color:black;
+  font-family: 'Neucha', cursive;
 }
 
 .login {
