--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,8 +6,7 @@
     <form method="post" action="/signup">
       <div class="row left">
         <h4> * All fields are required.</h4>
-
-        <div class="col-md-6">
+        <div class="col-md-3">
         <h3>Information</h3>
           <div class="form-group">
             <label for="name">Name:</label>
@@ -37,7 +36,7 @@
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-3">
           <div class="form-group">
           <h3>Address</h3>
             <label for="street">Street:</label>
@@ -45,7 +44,7 @@
           </div>
 
           <div class="form-group">
-            <label for="city">city:</label>
+            <label for="city">City:</label>
             <input class="form-control" type="text" name="city" id="city" required>
           </div>
 
@@ -64,120 +63,122 @@
             <input class="form-control" type="checkbox" name="organic" id="organic">
           </div>
         </div>
-      </div>
-      <hr>
-      <div class = "row">
+        <hr>
         <h2>Tell us what you're growing.</h2>
-          <hr>
-        <div class = "col-md-4">
-          <h3><b>Produce</b></h3>
-          <div class="form-group col-sm-3">
-            <label for="apples">Apples:</label>
-            <input class="form-control" type="checkbox" name="apples" id="apples" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="bananas">Bananas:</label>
-            <input class="form-control" type="checkbox" name="bananas" id="bananas" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="carrots">Carrots:</label>
-            <input class="form-control" type="checkbox" name="carrots" id="carrots" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="eggplant">Eggplant:</label>
-            <input class="form-control" type="checkbox" name="eggplant" id="eggplant" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="figs">Figs:</label>
-            <input class="form-control" type="checkbox" name="figs" id="figs" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="garlic">Garlic:</label>
-            <input class="form-control" type="checkbox" name="garlic" id="garlic" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="lettuce">Lettuce:</label>
-            <input class="form-control" type="checkbox" name="lettuce" id="lettuce" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="peppers">Peppers:</label>
-            <input class="form-control" type="checkbox" name="peppers" id="peppers" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="pumpkin">Pumpkin:</label>
-            <input class="form-control" type="checkbox" name="pumpkin" id="pumpkin" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="potatoes">Potatoes:</label>
-            <input class="form-control" type="checkbox" name="potatoes" id="potatoes" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="spinach">Spinach:</label>
-            <input class="form-control" type="checkbox" name="spinach" id="spinach" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="squash">Squash:</label>
-            <input class="form-control" type="checkbox" name="squash" id="squash" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="tomatoes">Tomatoes:</label>
-            <input class="form-control" type="checkbox" name="tomatoes" id="tomatoes" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="watermelon">Watermelon:</label>
-            <input class="form-control" type="checkbox" name="watermelon" id="watermelon" >
-          </div>
-        </div>
-        <div class = "col-md-4">
-          <h3><b>Meat</b></h3>
-          <div class="form-group col-sm-3">
-            <label for="beef">Beef:</label>
-            <input class="form-control" type="checkbox" name="beef" id="beef" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="chicken">Chicken:</label>
-            <input class="form-control" type="checkbox" name="chicken" id="chicken" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="duck">Duck:</label>
-            <input class="form-control" type="checkbox" name="duck" id="duck" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="lamb">Lamb:</label>
-            <input class="form-control" type="checkbox" name="lamb" id="lamb" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="pork">Pork:</label>
-            <input class="form-control" type="checkbox" name="pork" id="pork" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="rabbit">Rabbit:</label>
-            <input class="form-control" type="checkbox" name="rabbit" id="rabbit" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="venison">Venison:</label>
-            <input class="form-control" type="checkbox" name="venison" id="venison" >
-          </div>
+        <hr>
+          <div class = "col-md-6">
+            <!-- <h3><b>Produce</b></h3> -->
+            <div class = "col-md-3">
 
-        </div>
-        <div class = "col-md-4">
-         <h3><b>Other</b></h3>
-          <div class="form-group col-sm-3">
-            <label for="eggs">Eggs:</label>
-            <input class="form-control" type="checkbox" name="eggs" id="eggs" >
+              <div class="form-group">
+                <input type="checkbox" name="apples" id="apples" >
+                <label for="apples">Apples</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="bananas" id="bananas" >
+                <label for="bananas">Bananas</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="carrots" id="carrots" >
+                <label for="carrots">Carrots</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="eggplant" id="eggplant" >
+                <label for="eggplant">Eggplant</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="figs" id="figs" >
+                <label for="figs">Figs</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="garlic" id="garlic" >
+                <label for="garlic">Garlic</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="lettuce" id="lettuce" >
+                <label for="lettuce">Lettuce</label>
+              </div>
+            </div>
+            <div class = "col-md-3">
+              <div class="form-group">
+                <input type="checkbox" name="peppers" id="peppers" >
+                <label for="peppers">Peppers</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="pumpkin" id="pumpkin" >
+                <label for="pumpkin">Pumpkin</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="potatoes" id="potatoes" >
+                <label for="potatoes">Potatoes</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="spinach" id="spinach" >
+                <label for="spinach">Spinach</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="squash" id="squash" >
+                <label for="squash">Squash</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="tomatoes" id="tomatoes" >
+                <label for="tomatoes">Tomatoes</label>
+              </div>
+              <!-- LC: I added inline style to this input because it was slightly too big for the columns -->
+              <div class="form-group">
+                <input type="checkbox" name="watermelon" id="watermelon" >
+                <label for="watermelon" style = "font-size:0.9em">Watermelon</label>
+              </div>
+            </div>
+            <div class = "col-md-3">
+              <div class="form-group">
+                <input type="checkbox" name="beef" id="beef" >
+                <label for="beef">Beef</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="chicken" id="chicken" >
+                <label for="chicken">Chicken</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="duck" id="duck" >
+                <label for="duck">Duck</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="lamb" id="lamb" >
+                <label for="lamb">Lamb</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="pork" id="pork" >
+                <label for="pork">Pork</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="rabbit" id="rabbit" >
+                <label for="rabbit">Rabbit</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="venison" id="venison" >
+                <label for="venison">Venison</label>
+              </div>
+            </div>
+            <div class = "col-md-3">
+              <div class="form-group">
+                <input type="checkbox" name="eggs" id="eggs" >
+                <label for="eggs">Eggs</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="bread" id="bread" >
+                <label for="bread">Bread</label>
+              </div>
+              <div class="form-group">
+                <input type="checkbox" name="milk" id="milk" >
+                <label for="milk">Milk</label>
+              </div>
+            </div>
           </div>
-          <div class="form-group col-sm-3">
-            <label for="bread">Bread:</label>
-            <input class="form-control" type="checkbox" name="bread" id="bread" >
-          </div>
-          <div class="form-group col-sm-3">
-            <label for="milk">Milk:</label>
-            <input class="form-control" type="checkbox" name="milk" id="milk" >
-          </div>
-        </div>
       </div>
+
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-2 col-md-offset-10">
           <input class="btn btn-default btn-lg" type="submit">
         </div>
       </div>
