--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
   <h2>REGISTRATION</h2>
 </div>
 <!-- <div class="wrapper"> -->
-  <div class="authform">
+  <div id = "sign_up" class="authform">
     <form method="post" action="/signup">
       <div class="row left">
         <h4> * All fields are required.</h4>
@@ -63,7 +63,6 @@
             <input class="form-control" type="checkbox" name="organic" id="organic">
           </div>
         </div>
-        <hr>
         <h2>Tell us what you're growing.</h2>
         <hr>
           <div class = "col-md-6">
