--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,46 +8,14 @@
   <body>
     <div class= "container">
       <div class="row">
-        <div class="row">
           <div class="title col-lg-6 col-lg-offset-3">
             <h1><%= title %></h1>
-             <hr>
           </div>
-        </div>
-        <h5> "We pick it, you click it!" </h5>
-        <div class="row">
-          <div class="col-lg-10 col-md-offset-1">
-            <div class="col-lg-6">
-              <div class="imgWrap">
-                <img src="./images/arrows.png">
-                <div class= "imgDescription">
-                  <ul>
-                    <li> Locally grown food tastes and looks better. </li>
-                    <li> Local food is better for you. The shorter the time between the farm and your table, the less likely it is that nutrients will be lost.</li>
-                    <li> Local food is safe. There's a unique kind of assurance that comes from looking a farmer in the eye at farmers' market or driving by the fields where your food comes from.</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="imgWrap_Shovel">
-               <img src="./images/shovel.png">
-                <div class= "imgDescription_Shovel">
-                  <ul>
-                    <li> Farmers should think carefully about their operations and which opportunities might suit them best.</li>
-                    <li> Marketing takes time and resources although it can bring higher prices. </li>
-                    <li> With Farm connect, farmers can both strengthen their communities and their businesses</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
+            <h5> "We pick it, you click it!" </h5>
+          <div class="col-lg-6">  <img src="./images/BAN.gif">  </div>
+          <div class="col-lg-6">  <img class= "boxes2" src="./images/BAN2.gif">  </div>
           </div>
-        </div>
-          <!-- <div class="or-spacer-vertical left">
-            <div class="mask"></div>
-          </div> -->
       </div>
-    </div>
 
     <div class = "wrapper">
       <div class = "row">
