--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -188,6 +188,7 @@ img {
   opacity: .9;
   margin-bottom: 30px;
   margin-top: 15px;
+  float: left;
 }
 
 .or-spacer-vertical {
@@ -295,7 +296,23 @@ img {
   text-align: center;
 }
 
+.col-lg-6 {
+  width: 50%;
+  float: left;
+}
+
 h6{
   font-size: 1.8em;
   font-family: "Dosis", sans-serif;
+}
+
+
+.boxes1{
+  position: left;
+  float: center;
+}
+
+.boxes2{
+  position: left;
+  float: left;
 }
