--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,9 +70,23 @@ ul {
   background-color: rgba(0, 0, 0, 0.5);
 
 }
-.search-info h4 {
+
+/*************************/
+/***** Search Area *******/
+.search-info {
+  color: #888888;
+}
+.search-info  h4 {
   color: #888888;
   font-size: 1.4em;
+  text-align: center;
+}
+#btn {
+  margin: 0 auto;
+  text-align: center;
+}
+.btn-lg {
+  width: 500px;
 }
 
 /**********************/
