--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,7 +6,7 @@
     <form method="post" action="/signup">
       <div class="row left">
         <h4> * All fields are required.</h4>
-        <div class="col-md-3">
+        <div class="col-md-6">
         <h3>Information</h3>
           <div class="form-group">
             <label for="name">Name:</label>
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-6">
           <div class="form-group">
           <h3>Address</h3>
             <label for="street">Street:</label>
@@ -64,9 +64,9 @@
           </div>
         </div>
 
-      <div class="row">
-        <div class="col-md-2 col-md-offset-10">
-          <input class="btn btn-default btn-lg" type="submit">
+      <!-- <div class="row"> -->
+        <div class="col-md-4 col-md-offset-8">
+          <input class="btn-primary" type="submit">
         </div>
       </div>
     </form>
