--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
             <h1><%= title %></h1>
           </div>
             <h5> "We pick it, you click it!" </h5>
-          <div class="col-lg-6">  <img src="./images/BAN.gif">  </div>
-          <div class="col-lg-6">  <img class= "boxes2" src="./images/BAN2.gif">  </div>
+          <div class="col-lg-6">  <img src="./images/BAN.png">  </div>
+          <div class="col-lg-6">  <img class= "boxes2" src="./images/BAN2.png">  </div>
           </div>
       </div>
 
