fixing alignment again

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,12 @@
   </head>
   <body>
     <div class= "container">
-      <div class="row">
+     <h1><%= title %></h1>
+      <h5> "We pick it, you click it!" </h5>
+      <div class="row_index">
           <div class="title col-lg-6 col-lg-offset-3">
-            <h1><%= title %></h1>
-          <h5> "We pick it, you click it!" </h5>
           </div>
-          <div class="col-lg-6">  <img src="./images/BAN.png">  </div>
+          <div class="col-lg-6">  <img class= "boxes" src="./images/BAN.png">  </div>
           <div class="col-lg-6">  <img class= "boxes2" src="./images/BAN2.png">  </div>
           </div>
       </div>
