--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,21 +5,22 @@
 
     <div class="col-md-4">
         <img class="Pix" src="images/Loren.png" alt= "Loren's Photo" height="242" width="242">
-        <h6>Keep in touch with Loren!</h6>
-      <div class="LinkedIn"><h3>LinkedIn: <a href="https://www.linkedin.com/in/lorenmcrawford">My Profile</a></h3></div>
+        <h2>Keep in touch with Loren!</h2>
+      <div class="LinkedIn">
+      <h2>LinkedIn: <a href="https://www.linkedin.com/in/lorenmcrawford">My Profile</a></h2></div>
     </div>
 
     <div class="col-md-4">
         <img class="Pix" src="images/Via.jpg" alt= "Via's Photo" height="242" width="242">
-        <h6>Keep in touch with Guivia!</h6>
-       <div class="LinkedIn"><h3>LinkedIn: <a href=""> My Profile</a></h3></div>
+        <h2>Keep in touch with Guivia!</h2>
+       <div class="LinkedIn"><h2>LinkedIn: <a href=""> My Profile</a></h2></div>
     </div>
 
     <div class="col-md-4">
         <img class="Pix" src="images/selfie.jpg" alt= "Ian's Photo" height="242" width="242">
-        <h6>Keep in touch with Ian!</h6>
-       <div class="LinkedIn"><h3>LinkedIn: <a href="https://www.linkedin.com/in/iannarcissecousar">
-       My Profile</a></h3></div>
+        <h2>Keep in touch with Ian!</h2>
+       <div class="LinkedIn"><h2>LinkedIn: <a href="https://www.linkedin.com/in/iannarcissecousar">
+       My Profile</a></h2></div>
     </div>
   </div>
 </div>
