Changed design on farmers edit page

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -68,7 +68,7 @@
         <div class="col-md-4 col-md-offset-8">
           <input class="btn-primary" type="submit">
         </div>
-      </div>
+      <!-- </div> -->
     </form>
   </div>
 <!-- </div> -->
