--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
         </div>
       </div>
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-offset-1">
             <input class="btn btn-default btn-lg" type="submit">
           </div>
         </div>
