--- a/views/partials/farmer-form.ejs
+++ b/views/partials/farmer-form.ejs
@@ -71,7 +71,7 @@
         </div>
 
         <div class = "col-md-8">
-          <h2>TELL US WHAT YOU'RE GROWING.</h2>
+          <h2>TELL US WHAT YOU'RE GROWING</h2>
           <div class = "col-md-6">
             <h4><b>PRODUCE</b></h4>
             <hr>
