Aligned and added categories to index search list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,7 +94,10 @@ label {
   margin: auto;
   padding-left: 35px;
 }
-
+.search-list {
+  margin-left: 100px;
+  margin-right: -220px;
+}
 .btn-search {
   width: 400px;
 }
